<resources>
    <string name="app_name">AndroidTestApp</string>
    <string name="search_query_hint">Type a GitHub Repo name</string>
    <string name="message_welcome">Welcome to GitHub Search.\n Search your favorite repo</string>
    <string name="message_empty_result">Search result is empty</string>
    <string name="message_error">Oops! Something went wrong.\nPlease try again</string>
    <string name="no_network_message_error">Connect to the Internet or check your network connection.</string>
    <string name="no_network">Connect to the Internet or check your network connection.</string>
    <string name="ios">iOS</string>
    <string name="android">Android</string>
    <string name="search">Search</string>

</resources>
