<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.search.GithubSearchActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:id="@+id/screenHeader"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        >

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/colorPrimary"
            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
            app:theme="@style/ToolbarTheme"
            app:layout_scrollFlags="scroll|enterAlways">

            <androidx.appcompat.widget.AppCompatImageView
                android:layout_width="@dimen/github_toolbar_width"
                android:layout_height="@dimen/github_toolbar_height"
                android:background="@drawable/ic_github"
                android:layout_gravity="center"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="@style/LargeText"
                android:textColor="@android:color/white"
                android:paddingStart="@dimen/spacing_large"
                android:paddingEnd="@dimen/spacing_large"
                android:text="@string/app_name"
                android:layout_gravity="center"
                />

        </androidx.appcompat.widget.Toolbar>

        <androidx.appcompat.widget.SearchView
            android:id="@+id/search_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_corners"
            app:theme="@style/SearchViewTheme"
            app:iconifiedByDefault="false"
            app:queryHint="@string/search_query_hint"
            android:layout_marginTop="@dimen/search_view_padding_vertical"
            android:layout_marginBottom="@dimen/search_view_padding_vertical"
            android:layout_marginStart="@dimen/search_view_padding_horizontal"
            android:layout_marginEnd="@dimen/search_view_padding_horizontal"/>

        <CheckBox
            android:id="@+id/androidType"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/android"
            android:textSize="16sp"
            android:textStyle="bold"
            android:backgroundTint="@android:color/white"
            android:textColor="@android:color/white"
            android:layout_marginStart="@dimen/search_view_padding_horizontal"
            android:layout_marginEnd="@dimen/search_view_padding_horizontal"
            />
        <CheckBox
            android:id="@+id/iosType"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/ios"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@android:color/white"
            android:layout_marginStart="@dimen/search_view_padding_horizontal"
            android:layout_marginEnd="@dimen/search_view_padding_horizontal"
            />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/searchResultRecyclerView"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/screenHeader"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        />
    <com.opengroupe.androidtestapp.customView.LogoWithTextView
        android:id="@+id/view_welcome"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:background="@drawable/logo_welcome"
        app:text="@string/message_welcome" />

    <com.opengroupe.androidtestapp.customView.LogoWithTextView
        android:id="@+id/view_empty_result"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:background="@drawable/logo_empty_result"
        android:visibility="gone"
        app:text="@string/message_empty_result"/>

    <com.opengroupe.androidtestapp.customView.LogoWithTextView
        android:id="@+id/view_error"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:background="@drawable/logo_error"
        android:visibility="gone"
        app:text="@string/message_error"/>

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:visibility="visible" />
</androidx.constraintlayout.widget.ConstraintLayout>